trying to fix overflow bug on BlackBerry playbook, this fix is still untested...

--- a/assets/layout.css
+++ b/assets/layout.css
@@ -226,7 +226,7 @@ fieldset {
 	border-radius: 0.5em;
 	padding: 1em;
 	margin: 1em auto;
-	overflow: auto;
+	overflow: scroll;
 }
 
 h2 {
